Fixes rainbow overflow again

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -819,6 +819,10 @@ video {
   overflow-y: auto;
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 .p-1 {
   padding: 0.25rem;
 }
